src/objects/Contract_Lifecycle__c.object
<CustomObject>
    <description>This Custom Object will be used to capture a concatenation of information from Contract Stage Detail records for each stage.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Lifecycle</relationshipLabel>
        <relationshipName>Contract_Lifecycle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Minimum_Entry_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <label>Budget Minimum Entry Date</label>
        <summarizedField>Contract_Stage_Detail__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Contract_Stage_Detail__c.Status__c</field>
            <operation>equals</operation>
            <value>Budget at Customer for Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Stage_Detail__c.Contract_Lifecycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884 - Relates the Contract Lifecycle to its related Contract</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Lifecycle</relationshipLabel>
        <relationshipName>Contract_Lifecycle</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Executed_Minimum_Entry_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <label>Executed Minimum Entry Date</label>
        <summarizedField>Contract_Stage_Detail__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Contract_Stage_Detail__c.Status__c</field>
            <operation>equals</operation>
            <value>Contract Executed</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Stage_Detail__c.Contract_Lifecycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LQ_Contract_Lifecycle_ID__c</fullName>
        <externalId>true</externalId>
        <label>LQ Contract Lifecycle ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Error_Message__c</fullName>
        <label>LQ Mulesoft Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Sync_Status__c</fullName>
        <label>LQ Mulesoft Sync Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Sync_Timestamp__c</fullName>
        <label>LQ Mulesoft Sync Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Most_Recent_Actual_Contract_Value__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <label>Most Recent Actual Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Execution_Plan_Start_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884 - Most recent execution plan start date in this stage</description>
        <label>Most Recent Execution Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Planned_Execution_Date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884 - Most recent planned execution date in this stage</description>
        <label>Most Recent Planned Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Project_Expenses_Value__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <label>Most Recent Project Expenses Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Stage_Entry__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <label>Most Recent Status Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_of_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884</description>
        <formula>IF( 

OR(

Status__c = &quot;CA to Start Preparing Budget&quot;,Status__c = &quot;Budget Being Prepared by CA&quot;, Status__c = &quot;Budget with Analyst for Operational Edits&quot;, Status__c = &quot;Analyst Preparing Customer Budget Deliverable&quot;, Status__c = &quot;Budget with Analyst for Customer Edits&quot;, Status__c = &quot;Contract Being Prepared by CA&quot;, Status__c = &quot;Contract with Analyst for Operational Edits&quot;, Status__c = &quot;Analyst Preparing Customer Contract Deliverable&quot;, Status__c = &quot;Contract with Analyst for Customer Edits&quot;, Status__c = &quot;Ready to Execute&quot;, Status__c = &quot;Contract Executed&quot;),&quot;Analyst&quot;,

( 

IF( 

OR( 

Status__c = &quot;Contract at Customer for Review&quot;, Status__c = &quot;Budget at Customer for Review&quot;, Status__c = &quot;Negotiation Terminated&quot;, Status__c = &quot;On Hold&quot;),&quot;Customer&quot;,

( 

IF( 

OR( 

Status__c = &quot;Budget Awaiting Internal Team Review&quot;, Status__c = &quot;Budget Awaiting Internal Approval&quot;, Status__c = &quot;Contract Awaiting Internal Team Review&quot;, Status__c = &quot;Contract Awaiting Internal Approval&quot;), &quot;Internal Team&quot;, 

( 

IF( 

OR( 

Status__c = &quot;Pending Assignment&quot;, Status__c = &quot;Assigned - Not Started&quot;),&quot;Triage&quot;, 

&quot;N/A&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role of Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3148 -</description>
        <label>Status</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Business_Days_in_Stage__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884 - Total number of Business days in this stage. (rollup from &quot;Business Days in Stage&quot; on Contract Stage Detail</description>
        <label>Total Business Days in Stage</label>
        <summarizedField>Contract_Stage_Detail__c.Business_Days_in_Stage__c</summarizedField>
        <summaryForeignKey>Contract_Stage_Detail__c.Contract_Lifecycle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Times_in_Stage__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2884 - Number of times contract has been in this stage</description>
        <label>Number of Times in Status</label>
        <summarizedField>Contract_Stage_Detail__c.Rollup_count__c</summarizedField>
        <summaryForeignKey>Contract_Stage_Detail__c.Contract_Lifecycle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Contract Lifecycle</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Lifecycle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lifecycle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>